tests/ui/parser/issues/issue-15914.stderr
error: expected identifier, found `(`
  --> $DIR/issue-15914.rs:3:9
   |
LL |         ();
   |         ^ expected identifier

error: aborting due to 1 previous error

