tests/ui/parser/issues/issue-15914.rs
fn main() {
    let ref
        (); //~ ERROR expected identifier, found `(`
}
